# Web-Scraping

./: README.md  WEB_Scraping_Project - Guruchandra Kundena.ipynb  WEB_Scraping_Project.ipynb  pyproject.toml
src/Web_Scraping_Python/: Web_Scraping_API.py  Web_Scraping_BeautifulSoup.py  Web_Scraping_Selenium.py  Web_Scraping_XML.py
