[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Web-Scraping"
version = "0.1.0"
description = "Web-Scraping Project - XML, API's, "
authors = [{name = "Guruchandra Kundena", email = "kguruchandrak@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/kguruchandrak"
repository = "https://github.com/kguruchandrak/Web-Scraping"
documentation = "https://github.com/kguruchandrak/Web-Scraping/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
pandas = "^1.2.3"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
